This file documents the revision history for the Monitoring Webinterface Thruk.

1.26     not yet released...
          - show remaining minutes when using first_notification_delay
          - hide host/service selection for read-only users
          - added new config option show_backends_in_table to display site name in status table
          - cli tool:
              - implemented verbose mode with -v
          - fixed redirect in old browsers

1.24     Mon Mar 19 12:17:40 CET 2012
          - conf tool:
              - rename dependencies on object updates
              - reset reload flag on external reloads too
              - remove cached data when core config changes
              - add more shinken specific attributes
          - use current time when rescheduling checks with
            timestamp in the past to prevent breaking the latency calculation
          - fixed shinken livestatus version warning

1.22     Tue Mar  6 17:20:18 CET 2012
          - cli tool:
              - implemented setting backends with '-b'
          - use 127.0.0.1 and locahost tcp connections for local states too
          - preserve enabled themes/plugins on update via package
          - fixed packages apache config
          - fixed missing bracket on problems page
          - fixed problem with missing templates in packages
          - fixed customizing menu with insert_item()

1.20     Tue Feb 28 22:38:23 CET 2012
          - added cli tool
          - write pid file when running as fastcgi
          - show startpage when fcgid process is starting
          - added path to cookies, makes multiple instances possible on one host
          - added current attempt filter (Jordi van Scheijen)
          - fixed adding page reloads to browser history, now reloads don't show up in history
          - fixed statusmap table layout
          - fixed escaping newlines when escape_html is off
          - fixed sending commands to hosts/services with backslashes