@@ -235,6 +235,10 @@ plugins/plugins-available/statusmap/root/statusmap.js
 plugins/plugins-available/statusmap/root/Treemap.css
 plugins/plugins-available/statusmap/t/controller_statusmap.t
 plugins/plugins-available/statusmap/templates/statusmap.tt
+plugins/plugins-available/wml/lib/Thruk/Controller/wml.pm
+plugins/plugins-available/wml/README
+plugins/plugins-available/wml/t/controller_wml.t
+plugins/plugins-available/wml/templates/wml.tt
 plugins/plugins-enabled/conf
 plugins/plugins-enabled/minemap
 plugins/plugins-enabled/mobile
