@@ -1,0 +1,5 @@
+WML Plugin
+==========
+
+Author:  liedekef
+Purpose: simulate minimal statuswml.cgi to support ntray
