@@ -188,7 +188,7 @@ sub test_page {
     }
 
     SKIP: {
-        if($content_type =~ 'text\/html') {
+        if($content_type =~ 'text\/html' and (!defined $opts{'skip_html_lint'} or $opts{'skip_html_lint'} == 0)) {
             if($use_html_lint == 0) {
                 skip "no HTML::Lint installed", 2;
             }
